src/test/resources/fail/Lambda_01x.groovy
def a = () -> assert 1 == 1
